--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "canvas": "^2.11.2",
     "cloudinary": "^1.40.0",
+    "html2canvas": "^1.4.1",
+    "node-fetch": "^3.3.2",
     "openai": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +19,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "tnl-midjourney-api": "^1.0.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
