--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "canvas": "^2.11.2",
     "cloudinary": "^1.40.0",
     "deepai": "^1.0.23",
+    "googleapis": "^126.0.1",
     "html2canvas": "^1.4.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.4.0",
